manifests/07-final/quest-board-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quest-board
  namespace: adventure
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quest-board
                port:
                  number: 80
